# axiomate

./: .gitignore  CHANGELOG.md  DELETED_FEATURES.md  FEATURE_AUDIT.md  FEATURE_GATE_DECISIONS.md  FEATURE_GATE_SCAN.md  README.md  REMAINING_CLEANUP_AUDIT.md  harness-engineering-report.html  package.json  pnpm-workspace.yaml  project_auto_grow_subsystem.md  project_rag_roadmap.md
.claude/: settings.local.json
agent/: build.ts  buildPaths.ts  bunPluginComputerUseStub.ts  bunPluginNativeExeDir.ts  diff-report.txt  generateWinIcon.ts  generateWinIconBun.ts  package-linux.ts  package-mac.ts  package-win.ts  package.json  tsconfig.json  vitest.all.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts
agent-browser-axiomate/scripts/: fetch.mjs
agent/resources/: install.command
agent/resources/mac/: install.command
agent/scripts/: cu-debug-installed.ts  cu-debug-screenshot.ts
agent/src/: QueryEngine.ts  Task.ts  Tool.ts  commands.ts  context.ts  cost-tracker.ts  costHook.ts  dialogLaunchers.tsx  history.ts  interactiveHelpers.tsx  main.tsx  projectOnboardingState.ts  query.ts  setup.ts  tasks.ts  tools.ts
agent/src/__mocks__/: bun-bundle.ts
agent/src/__tests__/: README.md  normalizeContentFromAPI.test.ts  privateProtocolResidue.test.ts  smoke.test.ts  test-pipeline.ts  test-screenshot.ts  visionLocateConfig.test.ts
agent/src/assistant/: AssistantSessionChooser.ts  gate.ts  index.ts  sessionDiscovery.ts
agent/src/bootstrap/: state.ts
agent/src/bridge/: bridgeConfig.ts  bridgeEnabled.ts  bridgeMain.ts  bridgeMessaging.ts  createSession.ts  inboundAttachments.ts  inboundMessages.ts  initReplBridge.ts  peerSessions.ts  replBridge.ts  trustedDevice.ts  webhookSanitizer.ts
agent/src/buddy/: useBuddyNotification.tsx
agent/src/cli/: bg.ts  print.ts  rollback.ts  structuredIO.ts  up.ts  update.ts
agent/src/commands/: brief.ts  commit-push-pr.ts  createMovedToPluginCommand.ts  init-verifiers.ts  init.ts  insights.ts  install.tsx  review.ts  statusline.tsx  ultraplan.tsx
agent/src/components/: ApproveApiKey.tsx  AutoModeOptInDialog.tsx  AutoUpdater.tsx  AutoUpdaterWrapper.tsx  BypassPermissionsModeDialog.tsx  ClaudeInChromeOnboarding.tsx  ConsoleOAuthFlow.tsx  ContextVisualization.tsx  CoordinatorAgentStatus.tsx  DesktopHandoff.tsx  DevBar.tsx  DiagnosticsDisplay.tsx  EffortCallout.tsx  EffortIndicator.ts  ErrorBoundary.ts  FallbackToolUseErrorMessage.tsx  Feedback.tsx  FileEditToolUpdatedMessage.tsx  FileEditToolUseRejectedMessage.tsx  FullscreenLayout.tsx  IdeOnboardingDialog.tsx  InterruptedByUser.tsx  InvalidConfigDialog.tsx  (+36 more)
audio-capture-axiomate/: index.js  package.json
browser-bridge-axiomate/: package.json
browser-bridge-axiomate/src/: agentBrowserClient.test.ts  agentBrowserClient.ts  bun-ffi.d.ts  cdpClient.ts  consent.test.ts  consent.ts  enumerate.ts  index.ts  launcher.test.ts  launcher.ts  mcpServer.ts  processJail.test.ts  processJail.ts  toolCalls.disconnect.test.ts  toolCalls.test.ts  toolCalls.ts  tools.test.ts  tools.ts  types.ts
chrome-mcp-axiomate/: package.json  tsconfig.json
clipboard-axiomate/: index.d.ts  index.js  package.json
computer-use-dispatch-axiomate/: package.json
computer-use-dispatch-axiomate/src/: deniedApps.ts  executor.ts  imageResize.ts  index.ts  keyBlocklist.ts  mcpServer.ts  subGates.ts  toolCalls.ts  tools.ts  types.ts
computer-use-mac-napi-axiomate/: Cargo.toml  build.rs  index.d.ts  index.js  package.json
computer-use-mac-napi-axiomate/src/: lib.rs
computer-use-mcp-axiomate/: COORDINATES.md  package.json  tsconfig.json
computer-use-mcp-axiomate/src/: clickTarget.ts  deniedApps.ts  detection.test.ts  detection.ts  executor.ts  index.ts  mcpServer.ts  nonVlFeedback.test.ts  sentinelApps.ts  subGates.ts  toolCalls.test.ts  toolCalls.ts  tools.ts  types.ts
computer-use-native-axiomate/: package.json
computer-use-native-axiomate/src/: executor.ts  index.ts
computer-use-win-napi-axiomate/: Cargo.toml  build.rs  index.js  package.json  test-som.js  test-uia-debug.js
computer-use-win-napi-axiomate/src/: lib.rs
docs/: api-reliability-engineering-plan.md  axiomate-api-configuration-status.html  axiomate-hermes-file-harness-plan.md  axiomate-hermes-file-harness-report.html  axiomate-hermes-gap-report.html  axiomate-hermes-merged-report.html  checkpoints-defaults-tuning.md  checkpoints-v2-completion-plan.md  checkpoints-v2-design.md  checkpoints-v2-hermes-audit.md  checkpoints-v2-progress.md  file-harness-b59a-review-plan.md  file-harness-b59a-review-report.zh-CN.html  file-harness-b59a-risk-audit.zh-CN.html  goals-manual-test.md  template-system.md
docs/api/: protocol-vendor-template-parity-plan.md  template-system.md  vendor-quirks-cookbook.md
docs/checkpoint/: checkpoints-defaults-tuning.md  checkpoints-design.md  checkpoints-open-questions.md  checkpoints-review-findings.md  checkpoints-review-plan.md  checkpoints-test-plan.md  checkpoints-v2-design.md  checkpoints-v2-progress.md
docs/context/: claude-code-context-memory-gap-report.html
docs/file/: axiomate-hermes-file-harness-plan.md  read-state-write-consolidation-plan.md
docs/user/: checkpoints.html  checkpoints_en.html  checkpoints_hu.html  checkpoints_hun.html  checkpoints_zhcn.html  codex_plugin_zhcn.html  goals_en.html  goals_zhcn.html  model_configuration_zhcn.html  search_providers_zhcn.html
image-processor-axiomate/src/: clipboard.ts  index.ts
ink-axiomate/: package.json
ink-axiomate/src/: ink.tsx  reconciler.ts  render-to-screen.ts  types.d.ts
modifiers-mac-napi-axiomate/: index.js  package.json
react-reconciler-axiomate/: constants.js  index.js  package.json
rtk-axiomate/scripts/: fetch.mjs
samples/config/: minimal-deepseek-v4-pro.axiomate.json
samples/headless-subprocess-integration/: README.md  input.array.example.json  input.directory.example.json  input.example.json  report.example.json
samples/sdk-basics/: README.md  package.json  tsconfig.json
sandbox-axiomate/src/: index.ts
scripts/: bootstrap.mjs  load-napi.js
url-handler-mac-napi-axiomate/: index.js  package.json
(+1367 files in other folders)
