[package]
name = "computer-use-win-napi-axiomate"
version = "0.1.0"
edition = "2021"

[lib]
# `cdylib` builds the .node NAPI module. `rlib` is added so `cargo test`
# has a Rust-native lib target to link against — without it cargo test
# on a pure cdylib crate has nothing to compile tests into. Production
# .node output is unaffected (cdylib still produced).
crate-type = ["cdylib", "rlib"]

[dependencies]
# tokio_rt: napi-rs `#[napi] pub async fn` expansion needs this. Stage 1
# bindings are all sync, but we keep parity with mac NAPI so future async
# additions (e.g. WGC capture in Stage 3) drop in without re-flagging.
napi = { version = "2", features = ["napi6", "tokio_rt"] }
napi-derive = "2"

[target.'cfg(target_os = "windows")'.dependencies]
# Microsoft-official Win32 + WinRT bindings. Single crate covers everything
# Stage 1 needs (registry walk, window enumeration, process queries,
# monitor mapping, token elevation check) and is the future-proof path
# for Stage 2 (BitBlt) + Stage 3 (Windows.Graphics.Capture).
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",                   # TOKEN_QUERY, TokenElevation
  "Win32_System_Threading",           # OpenProcess, OpenProcessToken,
                                      # QueryFullProcessImageName, GetCurrentProcess
  "Win32_System_Diagnostics_ToolHelp", # CreateToolhelp32Snapshot,
                                      # Process32FirstW / Process32NextW —
                                      # parent-process walk for host terminal
                                      # detection (Stage 2 host-protection)
  "Win32_System_Registry",            # RegOpenKeyExW, RegEnumKeyExW,
                                      # RegQueryValueExW
  "Win32_UI_WindowsAndMessaging",     # WindowFromPoint, EnumWindows,
                                      # GetWindowThreadProcessId, IsWindowVisible,
                                      # PrintWindow (Stage 2.3 capture_window)
  "Win32_Graphics_Gdi",               # MonitorFromWindow, EnumDisplayMonitors,
                                      # GetMonitorInfoW, BitBlt / GetDIBits /
                                      # CreateCompatibleDC for capture_window
  "Win32_Storage_Xps",                # PrintWindow / PRINT_WINDOW_FLAGS / PW_*
                                      # (windows-rs put PrintWindow under Xps,
                                      # not WindowsAndMessaging, despite the
                                      # MSDN docs putting it in user32)
  "Win32_UI_Input_KeyboardAndMouse",  # SendInput, INPUT, MOUSEINPUT,
                                      # MOUSEEVENTF_* — direct Win32 mouse
                                      # input bypassing nut.js / libnut
                                      # (axiomate uses this for win clicks
                                      # since nut.js silently fails to
                                      # actually move the cursor in
                                      # Bun-compiled exes; standalone Node
                                      # works)
  "Win32_UI_Shell",                   # SHGetPropertyStoreForWindow — needed
                                      # to read PKEY_AppUserModel_ID off
                                      # UWP windows for AUMID-based
                                      # find_first_visible_window_for_bundle.
                                      # UWP visible HWNDs are owned by
                                      # ApplicationFrameHost.exe so process-
                                      # exe-path matching can't find them.
  "Win32_UI_Shell_PropertiesSystem",  # IPropertyStore, PROPERTYKEY,
                                      # PropVariantToStringAlloc — read AUMID
                                      # off the property store
  "Win32_System_Com",                 # CoInitializeEx, CoTaskMemFree —
                                      # SHGetPropertyStoreForWindow needs
                                      # COM apartment, the napi worker
                                      # thread doesn't have one without us
                                      # initing once.
  "Win32_System_Com_StructuredStorage", # PROPVARIANT — AUMID property value
                                        # comes back wrapped in this.
  "Win32_System_Variant",             # VT_LPWSTR / variant types referenced
                                      # by PROPVARIANT.
  "Win32_Graphics_Dwm",               # DwmGetWindowAttribute /
                                      # DWMWA_CLOAKED — Win10+ virtual
                                      # desktop cloaking. EnumWindows still
                                      # surfaces windows on other virtual
                                      # desktops as IsWindowVisible=true;
                                      # DwmGetWindowAttribute(DWMWA_CLOAKED)
                                      # is the only reliable filter so we
                                      # don't capture a Calculator on
                                      # desktop 2 when user is on desktop 1.
] }
# JPEG encoder for screenshot_window output. Matches mac NAPI's pipeline
# (image::JpegEncoder at quality 85) so the {base64,width,height} payload
# shape is identical across platforms — the agent layer doesn't branch on
# encoding choice. base64 STANDARD encoding likewise mirrors mac.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
opt-level = "z"
